# freud_bot

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.webconfig  LICENSE  Makefile  README.md  TODO.md  alembic.ini  create_stats.sql  docker-compose.yaml  pyproject.toml
.github/: release-drafter.yaml  release-drafter.yml
.github/workflows/: release.yaml
.hooks/: pre-commit
alembic/versions/: 2022-09-28_17:37_a2bd79234f94_create_course_table.py  2022-12-22_04h10_ce233a03ec25_create_config_table.py  2023-09-11_19:33_df3ec3c351b9_add_pin_react_count_config.py  2023-09-18_01:40_a9ef32be6b63_remove_verification_channel.py  2023-09-22_16:09_2adbec7716ff_add_verification_log_channel.py  2023-10-07_21h43_7f5cc27e7f61_add_confession_exposure_counter.py  2023-10-12_16h13_5014a1d75251_merge_freudpoints_and_confession_.py  2024-03-03_14:15_f62b8b1e6c4f_remove_calendar_tables.py  2024-03-25_14:00_8e6645912f0f_add_email_configuration.py  2024-03-25_14h00_8e6645912f0f_add_email_configuration.py  30892f96f367_create_lecture_table.py  3ce80343b85a_add_verification_messages_config.py  65f0d772d7ba_add_freudpoint_related_things.py  6f04bc4e4691_create_enrollment_table.py  8b81404b70b3_create_profile_table.py  a37a393bc831_move_exposed_count_to_profile_statistics.py  ce233a03ec25_create_config_table.py  da97958a0de6_add_freudr_info.py  df3ec3c351b9_add_pin_react_count_config.py
api/: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  config.py  diesel.toml  discord.py  main.py
api/routes/: auth.py  user.py
api/src/: error.rs  main.rs
api/src/routes/: discord.rs  mod.rs  oauth.rs
bot/: __init__.py  __main__.py  bot.py  constants.py  decorators.py  discord_logger.py  exceptions.py  util.py
bot/events/: __init__.py  bot.py  calendar.py  config.py  moderation.py  verify.py
bot/extensions/: __init__.py  calendar.py  confess.py  config.py  drive.py  listeners.py  random.py  verify.py
bot/log/: discord_handler.py  guild_adapter.py
bot/models/: __init__.py  config.py  course.py  enrollment.py  lecture.py  profile.py
bot/tasks/: __init__.py  freudpoint_increment.py
models/: __init__.py  config.py  course.py  enrollment.py  lecture.py  profile.py  profile_statistics.py
privacy-policy/: policy.tex
static/: select_guild.css
static/styles/: config_guild.css  root.css  select_guild.css
views/: base.html  config_guild.html  index.html  no_guilds.html  select_guild.html
web_config/: __init__.py  config.py  discord.py  logging.conf  main.py  session.py  templates.py
web_config/models/: discord.py
web_config/routes/: auth.py  config.py
web_config/static/: site.webmanifest
web_config/views/: base.html  config_guild.html  forbidden.html  no_guilds.html  select_guild.html
website/: .gitignore  .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
website/src/: app.d.ts  app.html  hooks.server.ts
website/static/: site.webmanifest
(+30 files in other folders)
