[tool.poetry]
name = "freud_bot"
version = "3.0.0"
description = "UGent discord bot"
authors = ["Tibo Ulens <ulens.tibo@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.12"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
alembic = "^1.8.1"
asyncpg = "^0.26.0"
"discord.py" = "^2.0.1"

[tool.poetry.group.bot.dependencies]
selenium = "^4.4.3"
requests = "^2.28.1"
CairoSVG = "^2.5.2"

[tool.poetry.group.webconfig.dependencies]
fastapi = "^0.97.0"
itsdangerous = "^2.1.2"
aiohttp = "^3.8.4"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
