[package]
name = "freudbot_api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 8

[dependencies]
anyhow = "1.0.91"
axum = { version="0.7.7", features=["macros"] }
axum-extra = { version="0.9.4", features=["cookie-private"] }
bb8 = "0.8.6"
bb8-redis = "0.17.0"
console-subscriber = "0.4.1"
diesel = "2.2.4"
diesel-async = { version="0.5.0", features=["postgres", "bb8", "async-connection-wrapper"] }
diesel_migrations = "2.2.0"
http = "1.1.0"
oauth2 = "4.4.2"
redis = { version="0.27.5", features=["tokio-comp"] }
reqwest = { version="0.12.8", features=["json"] }
serde = { version="1.0.213", features=["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
time = "0.3.36"
tokio = { version="1.41.0", features=["full", "tracing"] }
tower-http = { version="0.6.1", features=["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version="1.11.0", features=["v4", "v7"] }
